--- a/build.yaml
+++ b/build.yaml
@@ -13,13 +13,13 @@
 #
 ---
 include:
-  - board: nice_nano_v2
-    shield: skeletyl_left
-  - board: nice_nano_v2
-    shield: skeletyl_right
 #  - board: nice_nano_v2
-#    shield: dilemma_left
+#    shield: skeletyl_left
 #  - board: nice_nano_v2
-#    shield: dilemma_right
+#    shield: skeletyl_right
+  - board: nice_nano_v2
+    shield: dilemma_left
+  - board: nice_nano_v2
+    shield: dilemma_right
 #  - board: nice_nano_v2
 #    shield: settings_reset
