--- a/config/boards/shields/dilemma/dilemma.dtsi
+++ b/config/boards/shields/dilemma/dilemma.dtsi
@@ -6,8 +6,13 @@
 
 #include <dt-bindings/zmk/matrix_transform.h>
 
+nice_view_spi: &spi0 {
+    cs-gpios = <&pro_micro 21 GPIO_ACTIVE_HIGH>;
+};
+
 / {
     chosen {
+        zephyr,display = &oled;
         zmk,kscan = &kscan0;
         zmk,matrix_transform = &default_transform;
     };
